--- a/views/includes/products-display.ejs
+++ b/views/includes/products-display.ejs
@@ -19,16 +19,16 @@
         </div>
         <div class="card__actions">
           <% if (path === "/admin/products") { %>
-            <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
+            <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
             <form action="/admin/delete-product" method="POST">
-              <input type="hidden" name="productId" value="<%= product.id %>" />
+              <input type="hidden" name="productId" value="<%= product._id %>" />
               <button class="btn" type="submit">Delete</button>
             </form>
           <% } else { %>
             <form action="/cart" method="POST">
-              <a href="/products/<%= product.id %>" class="btn">Details</a>
+              <a href="/products/<%= product._id %>" class="btn">Details</a>
               <button class="btn" type="submit">Add to Cart</button>
-              <input type="hidden" name="productId" value="<%= product.id %>" />
+              <input type="hidden" name="productId" value="<%= product._id %>" />
             </form>
           <% } %>
         </div>
