--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -11,7 +11,7 @@
     <p><%= product.description %> </p>
     <form action="/cart" method="POST">
       <button type="submit" class="btn">Add to Cart</button>
-      <input type="hidden" name="productId" value="<%= product.id %>" />
+      <input type="hidden" name="productId" value="<%= product._id %>" />
     </form>
   </main>
 <%- include("../includes/end") %> 
